// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportProgress rendering states should render a state for end 1`] = `
<div
  className="alert alert-info"
>
  <Connect(Icon)
    icon="check"
    size="2x"
  />
  <div
    className="force-ltr"
  >
    <Connect(Translate)
      translationKey="Import completed"
    >
      Import completed. Number of entities created:
    </Connect(Translate)>
     
    5
    <br />
    <Connect(Translate)>
      Indexing entities may take a few minutes
    </Connect(Translate)>
  </div>
  <Connect(Icon)
    icon="times"
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
  />
</div>
`;

exports[`ImportProgress rendering states should render a state for errors 1`] = `
<div>
  <div
    className="alert alert-danger"
  >
    <Connect(Icon)
      icon="exclamation-triangle"
      size="2x"
    />
    <div
      className="force-ltr"
    >
      <Connect(Translate)>
        The import process threw an error:
      </Connect(Translate)>
    </div>
    <Connect(Icon)
      icon="times"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    />
  </div>
  <StackTrace
    message="Something bad happened"
    validations={null}
  />
</div>
`;

exports[`ImportProgress rendering states should render a state for errors 2`] = `
<div>
  <div
    className="alert alert-danger"
  >
    <Connect(Icon)
      icon="exclamation-triangle"
      size="2x"
    />
    <div
      className="force-ltr"
    >
      <Connect(Translate)>
        The import process threw an error:
      </Connect(Translate)>
    </div>
    <Connect(Icon)
      icon="times"
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
        }
      }
    />
  </div>
  <StackTrace
    message="validation error"
    validations={
      Immutable.List [
        Immutable.Map {
          "message": "should be number",
          "instancePath": ".metadata['number']",
          "schemaPath": "#/metadataMatchesTemplateProperties",
        },
      ]
    }
  />
</div>
`;

exports[`ImportProgress rendering states should render a state for normal progress 1`] = `
<div
  className="alert alert-info"
>
  <Connect(Icon)
    icon="cog"
    size="2x"
  />
  <div
    className="force-ltr"
  >
    <Connect(Translate)>
      Importing data in progress
    </Connect(Translate)>
    : 
    5
  </div>
</div>
`;
